--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.2",
+    "@mui/styled-engine": "^5.12.0",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "firebase": "^9.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.62.0"
+    "react-router-dom": "^6.10.0",
+    "sass": "^1.62.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
